test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/stdout.snap
---
source: test/tests/tests.rs
---
exit status: 1
stdout:
    Building src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors
   Compiling library core (sway-lib-core)
   Compiling library std (sway-lib-std)
   Compiling script type_check_analyze_errors (test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors)

stderr:
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:5:14
  |
3 | 
4 |     // 0x100 does not fit into a u8
5 |     let _a = 0x100;
  |              ^^^^^ Literal would overflow because its value does not fit into "u8"
6 |     Vec::<u8>::new().push(_a);
  |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:9:14
   |
 7 | 
 8 |     // 0x10000 does not fit into a u16
 9 |     let _a = 0x10000;
   |              ^^^^^^^ Literal would overflow because its value does not fit into "u16"
10 |     Vec::<u16>::new().push(_a);
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:13:14
   |
11 | 
12 |     // 0x100000000 does not fit into a u32
13 |     let _a = 0x100000000;
   |              ^^^^^^^^^^^ Literal would overflow because its value does not fit into "u32"
14 |     Vec::<u32>::new().push(_a);
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:20:22
   |
<<<<<<< HEAD
18 | 
19 | fn insufficient_type_check(arg: u64) -> [u32;2] {
20 |     let res = [1u32, arg];
=======
17 | 
18 |     // Array - different numerics
19 |     let a = [1, 2u8, 3u16, 4u32, 5u64];
   |                      ^^^^ Mismatched types.
expected: u8
found:    u16.

20 | 
21 |     // Array - unspecified generic structs
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:19:28
   |
17 | 
18 |     // Array - different numerics
19 |     let a = [1, 2u8, 3u16, 4u32, 5u64];
   |                            ^^^^ Mismatched types.
expected: u8
found:    u32.

20 | 
21 |     // Array - unspecified generic structs
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:19:34
   |
17 | 
18 |     // Array - different numerics
19 |     let a = [1, 2u8, 3u16, 4u32, 5u64];
   |                                  ^^^^ Mismatched types.
expected: u8
found:    u64.

20 | 
21 |     // Array - unspecified generic structs
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:23:27
   |
21 |     // Array - unspecified generic structs
22 |     let a = [None, Some(1), Some(1u8)];
23 |     let _b: Option<u16> = a[1];
   |                           ^^^^ Mismatched types.
expected: Option<u16>
found:    Option<u8>.
help: Variable declaration's type annotation does not match up with the assigned expression's type.
24 | 
25 |     // Wrong cast
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:26:25
   |
24 | 
25 |     // Wrong cast
26 |     let a = [8, 256u16, 8u8];
   |                         ^^^ Mismatched types.
expected: u16
found:    u8.

27 |     let b: u32 = a[2];
28 | }
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:27:18
   |
25 |     // Wrong cast
26 |     let a = [8, 256u16, 8u8];
27 |     let b: u32 = a[2];
   |                  ^^^^ Mismatched types.
expected: u32
found:    u16.
help: Variable declaration's type annotation does not match up with the assigned expression's type.
28 | }
29 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:31:22
   |
29 | 
30 | fn insufficient_type_check(arg: u64) -> [u32;2] {
31 |     let res = [1u32, arg];
>>>>>>> 911ef0eb7 (fix code snippet for old diagnostics)
   |                      ^^^ Mismatched types.
expected: u32
found:    u64.

21 |     res
22 | }
   |
____

<<<<<<< HEAD
  Aborting due to 4 errors.
=======
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:4:14
  |
2 | 
3 | fn main() {
4 |     let _a = 0x100;
  |              ^^^^^ Literal would overflow because its value does not fit into "u8"
5 |     Vec::<u8>::new().push(_a);
6 | 
  |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:8:14
   |
 6 | 
 7 |     // u16
 8 |     let _a = 0x10000;
   |              ^^^^^^^ Literal would overflow because its value does not fit into "u16"
 9 |     Vec::<u16>::new().push(_a);
10 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/type_check_analyze_errors/src/main.sw:12:14
   |
10 | 
11 |     // u32
12 |     let _a = 0x100000000;
   |              ^^^^^^^^^^^ Literal would overflow because its value does not fit into "u32"
13 |     Vec::<u32>::new().push(_a);
14 | 
   |
____

  Aborting due to 12 errors.
>>>>>>> 911ef0eb7 (fix code snippet for old diagnostics)
error: Failed to compile type_check_analyze_errors
